suppress warnings for jzbar ffm usage